refactor: reformat code and set the resource id claim as configurable